ktlint: Fix formatting task when running on JDK 16+